[package]
name = "bandmix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "=2.0.0-rc.3"
chrono = "0.4.38"
cpal = "0.15.3"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
curl = "0.4.46"
dashmap = "6.0.1"
directories = "5.0.1"
flate2 = "1.0.30"
gjson = "0.8.1"
html-escape = "0.2.13"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
raw-window-handle = "0.6.2"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
rodio = "0.19.0"
scraper = "0.19.1"
serde = "1.0.204"
serde_flow = "1.1.1"
serde_json = "1.0.120"
sharded-slab = "0.1.7"
souvlaki = "0.7.3"
stream-download = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
symphonia = "0.5.4"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
url2audio = "0.2.2"
windows = { version = "0.58.0", features = ["Media", "Win32_Foundation", "Win32_System_Console", "Win32_System_WinRT", "Win32_UI_WindowsAndMessaging"] }
