[package]
name = "bandmix"
authors = ["LeHuman"]
version = "0.1.3"
edition = "2021"
description = "A minimal autoplayer of bandcamp's discover section"
repository = "https://github.com/lehuman/bandmix"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
dashmap = "6.1.0"
gjson = "0.8.1"
html-escape = "0.2.13"
localsavefile = "0.2.5"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
rodio = "0.19.0"
savefile = "0.17.8"
scraper = "0.20.0"
sharded-slab = "0.1.7"
stream-download = "0.9.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"

[target.'cfg(target_os = "macos")'.dependencies]
souvlaki = "0.7.3"

[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.7.3", default-features = false, features = [
    "use_zbus",
] }

[target.'cfg(windows)'.dependencies]
souvlaki = "0.7.3"
windows = { version = "0.58.0", features = [
    "Media",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
